--- a/Grzegorz_Kotysz_MKWS.tex
+++ b/Grzegorz_Kotysz_MKWS.tex
@@ -54,15 +54,18 @@ Now the appropriate case files have to be edited in order to use chemkin files. 
 \begin{lstlisting}
 chemistryReader foamChemistryReader;
 foamChemistryFile "$FOAM_CASE/constant/reactions";
-foamChemistryThermoFiler "$FOAM_CASE/constant/thermo.compressible:'
+foamChemistryThermoFile "$FOAM_CASE/constant/thermo.compressible:'
 \end{lstlisting}
 to:
 \begin{lstlisting}
 chemistryReader chemkinReader;
 CHEMKINFile "$FOAM_CASE/chemkin/drm19.dat";
-CHEMKINThermoFile "$FOAM_CASE/chemkin/thermo30.dat";
+CHEMKINTransportFile "$FOAM_CASE/chemkin/thermo30.dat";
 \end{lstlisting}
-NOTE: SOME CHANGES TO CHEMKIN FILES MIGHT BE NECESSARY [TO BE CHECKED]
+NOTE: In tutorial author states "CHEMKINThermoFile", but in newer versions of OF, "CHEMKINTransportFile" keyword must be used.
+Unfortunately the default CHEMKIN file is not read correctly by OF reader. Hence, it must be changed.
+SOME CHANGES TO CHEMKIN FILES MIGHT BE NECESSARY [TO BE CHECKED]
+MAYBE TRY chemkinToFoam
 
 As the aforementioned tutorial aims to simulate premixed flame, some changes to boundary conditions wll be made. Afterwards, the case will simulate counterflow of two premixed fuel-air mixtures with the temperature of 305$K$ with the velocity equal to 0.8$m/s$. The ignition will be implemented as the high temperature zone in the middle of the domain by the use of setFields command, so the appropriate setFieldsDict file must be created.
 
