--- a/Grzegorz_Kotysz_MKWS.tex
+++ b/Grzegorz_Kotysz_MKWS.tex
@@ -65,14 +65,15 @@ CHEMKINThermoFile "$FOAM_CASE/chemkin/thermo30.dat";
 It seems now transport properties are not hard-coded anymore in chemkinReader, hence, transport file must be prepared.\footnote{https://bugs.openfoam.org/view.php?id=1888} However, it seem now it is impossible to use chemkinReader.\footnote{https://bugs.openfoam.org/view.php?id=2582} Hence, chemkinToFoam will be used to translate chemkin files to foam files by running command, where foamChemistry and foamThermo are names of the reactions and thermodynamics properties files.
 \begin{lstlisting}
 cd $caseDir/chemkin
-chemkinToFoam drm19.dat thermo30.dat transport.dat foamChemistry foamThermo
+chemkinToFoam drm19.dat thermo30.dat transport.dat 
+	foamChemistry foamThermo
 \end{lstlisting}
 Now, the constant/thermophysicalProperties must be changed to read files from chemkin directory.
 \begin{lstlisting}
 foamChemistryFile "$FOAM_CASE/chemkin/foamChemistry";
 foamChemistryThermoFile "$FOAM_CASE/chemkin/foamThermo";
 \end{lstlisting}
-Unfortunately, chemkinToFoam requires files in CHEMKIN 3 format\footnote{https://www.openfoam.com/documentation/user-guide/standard-utilities.php#dx33-136284} and these files are now inaccessible, so the reaction and thermodynamics data will be taken from tutorials in OpenFOAM installation.
+Unfortunately, chemkinToFoam requires files in CHEMKIN 3 format\footnote{https://www.openfoam.com/documentation/user-guide/standard-utilities.php\#dx33-136284} and these files are now inaccessible, so the reaction and thermodynamics data will be taken from tutorials in OpenFOAM installation.
 The constant/thermophysicalProperties must be changed to read files from chemkin directory.
 \begin{lstlisting}
 foamChemistryFile "$FOAM_CASE/constant/reactionsGRI";
@@ -104,7 +105,8 @@ In order to use ISAT-CK7 code, both Cantera and the code itself must be compiled
 It is necessary to adjust Cantera build options for both codes to work properly. First of all, Cantera must be downloaded\footnote{url: https://sourceforge.net/projects/cantera/}. In this work Cantera 2.3.0 is used. As the aforementioned tutorial was written for Cantera 2.2.0, some changes had to be introduced. Namely, the -fPIC (Position Independent Code) flags must be added to certain functions.(ARE THEY REALLY FUNCTIONS? INQUIRE) Tutorial author presents line numbers, however, in this paper function names are also included, as the line numbers change between Cantera versions.
 \begin{lstlisting}
 L241 defaults.ccFlags = ' ' -> defaults.ccFlags = '-fPIC'
-L409-411 ('FORTRANFLAGS', ..., '-03'), -> ('FORTRANFLAGS', ..., '-fPIC -03'),
+L409-411 ('FORTRANFLAGS', ..., '-03'), -> 
+	('FORTRANFLAGS', ..., '-fPIC -03'),
 \end{lstlisting}
 In the original tutorial the 'F77FLAG' must also be changed, but it is not present in Cantera 2.3.0. The next step is to compile Cantera.
 \begin{lstlisting}
@@ -127,9 +129,10 @@ cmake ..
 make 
 sudo make install
 \end{lstlisting}
-Next, the same situation happened for gtest\footnote{https://github.com/google/googletest} and Eigen\footnote{https://eigen.tuxfamily.org/index.php?title=Main_Page} libraries. {{{Note: all three packages can be also installed into <cantera folder>/ext folder and Scons will resolve the issue}}}. In fact, Eigen library did not work as compiled for local user. It had to be copied into cantera installation folder. After finishing all the above steps, the following error was discovered while running scons build:
+Next, the same situation happened for gtest\footnote{https://github.com/google/googletest} and Eigen\footnote{https://eigen.tuxfamily.org/index.php?title\=Main\_Page} libraries. {{{Note: all three packages can be also installed into <cantera folder>/ext folder and Scons will resolve the issue}}}. In fact, Eigen library did not work as compiled for local user. It had to be copied into cantera installation folder. After finishing all the above steps, the following error was discovered while running scons build:
 \begin{lstlisting}
-from src/fortran/fct.cpp:14: include/cantera/base/fmt.h:5:26: fatal error: fmt/format.h: No such file or directory
+from src/fortran/fct.cpp:14: include/cantera/base/fmt.h:5:26: 
+	fatal error: fmt/format.h: No such file or directory
 compilation terminated.
 \end{lstlisting}
 After manually compiling aforementioned libraries, some other errors occurred, which are not described in detail.	
@@ -139,14 +142,16 @@ Added \footnote{https://github.com/Cantera/cantera/issues/470}
 #include "/usr/local/include/fmt/printf.h" (if fmt was compiled locally)
 \end{lstlisting}
 to file include/cantera/base/global.h as the function sprintf was moved from format.h to printf.h header in fmt library.
-New error was encountered, also noted by other users:\footnote{https://groups.google.com/forum/#!topic/cantera-users/31rTjyavJQA}
+New error was encountered, also noted by other users:\footnote{https://groups.google.com/forum/\#!topic/cantera-users/31rTjyavJQA}
 \begin{lstlisting}
-src/thermo/MolalityVPSSTP.cpp:414:5: error: 'MemoryWriter' is not a member of 'fmt'
+src/thermo/MolalityVPSSTP.cpp:414:5: error: 
+	'MemoryWriter' is not a member of 'fmt'
 \end{lstlisting}
 Hence, line 414 was changed from:
 \begin{lstlisting}
     fmt::MemoryWriter b;
 \end{lstlisting}
+to
 \begin{lstlisting}
     fmt::writer b;
 \end{lstlisting}
@@ -175,6 +180,21 @@ New type of error was met:
 In file included from src/kinetics/Group.cpp:9:0:
 include/cantera/kinetics/Group.h:128:80: error: macro "fmt" passed 2 arguments, but takes just 1
 \end{lstlisting}
+The solution to the problem was found in the development version of include/cantera/base/fmt.h file.\footnote{https://github.com/Cantera/cantera/blob/master/include/cantera/base/fmt/h [Accessed on 1.07.2018]} In the aforementioned Group.cpp and Group.h file funtion "fmt" is misintepreted as there exist fmt macro in fmtlib. Hence, the following line was added:
+\begin{lstlisting}
+#define FMT_NO_FMT_STRING_ALIAS
+\end{lstlisting}
+In addition, the newer fmt.h file solves the problem of including printf.h header file from fmtlib, so the changes in global.h file described at the beginning of the paper are not necessary. Furthermore, it solves compatibility problems across different fmtlib versions.
+Next error arised and the error message looked as follows:
+\begin{lstlisting}
+//usr/local/lib/libfmt.a(format.cc.o): relocation R_X86_64_32S against `_ZTVN3fmt2v512format_errorE' can not be used when making a shared object; recompile with -fPIC
+//usr/local/lib/libfmt.a: error adding symbols: Bad value
+\end{lstlisting}
+Hence, the fmt library shall be recompiled using -fPIC flag or the solution used in newer fmt.h file could be used:
+\begin{lstlisting}
+#define FMT_HEADER_ONLY
+\end{lstlisting}
+It is worth to mention that although the code which can be found at cantera github was published 4 days earlier, the compatibility with new fmt library was achieved simultaneously. The main difference is the elegance of the 'professional' solution in comparison with (naokolo, objazd) presented in this paper. Hence, it is recommended using development cantera version instead of using stable cantera distribution and editing it with attached script. This led to the decision to edit scripts so the user could choose whether he is using development or stable cantera version. Finally, Cantera was successfully installed.
 
 Now, the ISAT-CK7 cantera fortran code must be downloaded.
 	
